# proof-cat

./: Cargo.toml  README.md
.github/workflows/: docs.yml
src/: error.rs  lib.rs  prove.rs  transcript.rs
src/commit/: merkle.rs  mod.rs
src/field/: baby_bear.rs  mod.rs  serialize.rs
src/poly/: mod.rs  multilinear.rs
src/sumcheck/: mod.rs  protocol.rs  prover.rs  verifier.rs
